3511 Add guide activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         <activity android:name=".MainActivity">
 
         </activity><!--end主界面-->
+
+        <!--引导界面-->
+        <activity android:name=".activity.GuideActivity"/>
+
     </application>
 
 </manifest>
