3526 Add goto login or register activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <!--启动界面-->
+        <!-- 登录注册界面 -->
+        <activity android:name=".activity.LoginOrRegisterActivity"></activity>
+        <!-- 启动界面 -->
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><!--end启动界面-->
-        <!--主界面-->
-        <activity android:name=".MainActivity">
-
-        </activity><!--end主界面-->
-
-        <!--引导界面-->
-        <activity android:name=".activity.GuideActivity"/>
-
+        </activity> <!-- end启动界面 -->
+        <!-- 主界面 -->
+        <activity android:name=".MainActivity"></activity> <!-- end主界面 -->
+        <!-- 引导界面 -->
+        <activity android:name=".activity.GuideActivity" />
     </application>
 
 </manifest>
