3554 Add goto login activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".activity.LoginActivity"></activity>
         <!-- 登录注册界面 -->
-        <activity android:name=".activity.LoginOrRegisterActivity"></activity>
-        <!-- 启动界面 -->
+        <activity android:name=".activity.LoginOrRegisterActivity" /> <!-- 启动界面 -->
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity> <!-- end启动界面 -->
         <!-- 主界面 -->
-        <activity android:name=".MainActivity"></activity> <!-- end主界面 -->
+        <activity android:name=".MainActivity" /> <!-- end主界面 -->
         <!-- 引导界面 -->
         <activity android:name=".activity.GuideActivity" />
     </application>
