--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activity.LoginActivity"></activity>
-        <!-- 登录注册界面 -->
+        <activity android:name=".activity.RegisterActivity"></activity>
+        <activity android:name=".activity.LoginActivity" /> <!-- 登录注册界面 -->
         <activity android:name=".activity.LoginOrRegisterActivity" /> <!-- 启动界面 -->
         <activity android:name=".activity.SplashActivity">
             <intent-filter>
