--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,9 @@ dependencies {
     //material design依赖
     // AppBarLayout在这里面
     implementation 'com.google.android.material:material:1.0.0'
+
+    //apache common lang3工具包
+    // 提供了StringUtils等这样的类
+    // http://commons.apache.org/proper/commons-lang/
+    implementation 'org.apache.commons:commons-lang3:3.9'
 } 
