--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
         }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
@@ -28,6 +29,7 @@ allprojects {
         maven {
             url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
